--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -22,9 +22,11 @@ const {
 ---
 
 <div class="container">
-  <span class="date">
-    {date}
-  </span>
+  <div class="date">
+    <span>
+      {date}
+    </span>
+  </div>
   <li class="histogram">
     <img class="time-icon" src={logo} />
     <div>
@@ -62,11 +64,14 @@ const {
     display: flex;
   }
   .date {
-    display: flex;
-    padding-right: 2.1rem;
-    max-width: 50px;
+    display: inline-flex;
+    flex-wrap: wrap;
+    margin-right: 2.1rem;
     height: 50px;
     align-items: center;
+    span {
+      max-width: 50px;
+    }
   }
   .time-icon {
     margin-left: -27px;
@@ -74,8 +79,8 @@ const {
     border: 2px solid var(--color);
     background-color: var(--color);
     border-radius: 50%;
-    height: 30px;
-    width: 30px;
+    height: 50px;
+    width: 50px;
     margin-right: 1.25rem;
     padding: 8px;
     flex: 0 0 30px;
